--- a/requirements.txt
+++ b/requirements.txt
@@ -1,128 +1,77 @@
-aiohappyeyeballs=2.6.1=pypi_0
-aiohttp=3.11.18=pypi_0
-aiosignal=1.3.2=pypi_0
-altair=5.5.0=pypi_0
-annotated-types=0.7.0=pypi_0
-anyio=4.9.0=pypi_0
-appnope=0.1.4=pyhd8ed1ab_1
-asttokens=3.0.0=pyhd8ed1ab_1
-attrs=25.3.0=pypi_0
-blinker=1.9.0=pypi_0
-bzip2=1.0.8=h99b78c6_7
-ca-certificates=2025.4.26=hbd8a1cb_0
-cachetools=5.5.2=pypi_0
-certifi=2025.4.26=pypi_0
-charset-normalizer=3.4.2=pypi_0
-click=8.2.0=pypi_0
-comm=0.2.2=pyhd8ed1ab_1
-dataclasses-json=0.6.7=pypi_0
-debugpy=1.8.14=py313h928ef07_0
-decorator=5.2.1=pyhd8ed1ab_0
-distro=1.9.0=pypi_0
-exceptiongroup=1.2.2=pyhd8ed1ab_1
-executing=2.2.0=pyhd8ed1ab_0
-frozenlist=1.6.0=pypi_0
-gitdb=4.0.12=pypi_0
-gitpython=3.1.44=pypi_0
-h11=0.16.0=pypi_0
-httpcore=1.0.9=pypi_0
-httpx=0.28.1=pypi_0
-httpx-sse=0.4.0=pypi_0
-idna=3.10=pypi_0
-importlib-metadata=8.6.1=pyha770c72_0
-ipykernel=6.29.5=pyh57ce528_0
-ipython=9.2.0=pyhfb0248b_0
-ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
-jedi=0.19.2=pyhd8ed1ab_1
-jinja2=3.1.6=pypi_0
-jiter=0.9.0=pypi_0
-jsonpatch=1.33=pypi_0
-jsonpointer=3.0.0=pypi_0
-jsonschema=4.23.0=pypi_0
-jsonschema-specifications=2025.4.1=pypi_0
-jupyter_client=8.6.3=pyhd8ed1ab_1
-jupyter_core=5.7.2=pyh31011fe_1
-krb5=1.21.3=h237132a_0
-langchain=0.3.25=pypi_0
-langchain-community=0.3.23=pypi_0
-langchain-core=0.3.59=pypi_0
-langchain-openai=0.3.16=pypi_0
-langchain-text-splitters=0.3.8=pypi_0
-langsmith=0.3.42=pypi_0
-libcxx=20.1.4=ha82da77_1
-libedit=3.1.20250104=pl5321hafb1f1b_0
-libexpat=2.7.0=h286801f_0
-libffi=3.4.6=h1da3d7d_1
-liblzma=5.8.1=h39f12f2_1
-libmpdec=4.0.0=h99b78c6_0
-libsodium=1.0.20=h99b78c6_0
-libsqlite=3.49.2=h3f77e49_0
-libzlib=1.3.1=h8359307_2
-markupsafe=3.0.2=pypi_0
-marshmallow=3.26.1=pypi_0
-matplotlib-inline=0.1.7=pyhd8ed1ab_1
-multidict=6.4.3=pypi_0
-mypy-extensions=1.1.0=pypi_0
-narwhals=1.38.2=pypi_0
-ncurses=6.5=h5e97a16_3
-nest-asyncio=1.6.0=pyhd8ed1ab_1
-numpy=2.2.5=pypi_0
-openai=1.78.0=pypi_0
-openssl=3.5.0=h81ee809_1
-orjson=3.10.18=pypi_0
-packaging=24.2=pypi_0
-pandas=2.2.3=pypi_0
-parso=0.8.4=pyhd8ed1ab_1
-pexpect=4.9.0=pyhd8ed1ab_1
-pickleshare=0.7.5=pyhd8ed1ab_1004
-pillow=11.2.1=pypi_0
-pip=25.1.1=pyh145f28c_0
-platformdirs=4.3.8=pyhe01879c_0
-prompt-toolkit=3.0.51=pyha770c72_0
-propcache=0.3.1=pypi_0
-protobuf=6.30.2=pypi_0
-psutil=7.0.0=py313h90d716c_0
-ptyprocess=0.7.0=pyhd8ed1ab_1
-pure_eval=0.2.3=pyhd8ed1ab_1
-pyarrow=20.0.0=pypi_0
-pydantic=2.11.4=pypi_0
-pydantic-core=2.33.2=pypi_0
-pydantic-settings=2.9.1=pypi_0
-pydeck=0.9.1=pypi_0
-pygments=2.19.1=pyhd8ed1ab_0
-python=3.13.3=h81fe080_101_cp313
-python-dateutil=2.9.0.post0=pyhff2d567_1
-python-dotenv=1.1.0=pypi_0
-python_abi=3.13=7_cp313
-pytz=2025.2=pypi_0
-pyyaml=6.0.2=pypi_0
-pyzmq=26.4.0=py313he6960b1_0
-readline=8.2=h1d1bf99_2
-referencing=0.36.2=pypi_0
-regex=2024.11.6=pypi_0
-requests=2.32.3=pypi_0
-requests-toolbelt=1.0.0=pypi_0
-rpds-py=0.24.0=pypi_0
-six=1.17.0=pyhd8ed1ab_0
-smmap=5.0.2=pypi_0
-sniffio=1.3.1=pypi_0
-sqlalchemy=2.0.40=pypi_0
-stack_data=0.6.3=pyhd8ed1ab_1
-streamlit=1.45.0=pypi_0
-tenacity=9.1.2=pypi_0
-tiktoken=0.9.0=pypi_0
-tk=8.6.13=h5083fa2_1
-toml=0.10.2=pypi_0
-tornado=6.4.2=py313h90d716c_0
-tqdm=4.67.1=pypi_0
-traitlets=5.14.3=pyhd8ed1ab_1
-typing-inspect=0.9.0=pypi_0
-typing-inspection=0.4.0=pypi_0
-typing_extensions=4.13.2=pyh29332c3_0
-tzdata=2025.2=pypi_0
-urllib3=2.4.0=pypi_0
-wcwidth=0.2.13=pyhd8ed1ab_1
-yarl=1.20.0=pypi_0
-zeromq=4.3.5=hc1bb282_7
-zipp=3.21.0=pyhd8ed1ab_1
-zstandard=0.23.0=pypi_0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+dataclasses-json==0.6.7
+distro==1.9.0
+frozenlist==1.6.0
+gitdb==4.0.12
+gitpython==3.1.44
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+jinja2==3.1.6
+jiter==0.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+langchain==0.3.25
+langchain-community==0.3.23
+langchain-core==0.3.59
+langchain-openai==0.3.16
+langchain-text-splitters==0.3.8
+langsmith==0.3.42
+markupsafe==3.0.2
+marshmallow==3.26.1
+multidict==6.4.3
+mypy-extensions==1.1.0
+narwhals==1.38.2
+nest-asyncio==1.6.0
+numpy==2.2.5
+openai==1.78.0
+orjson==3.10.18
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
+protobuf==6.30.2
+psutil==7.0.0
+propcache==0.3.1
+pyarrow==20.0.0
+pydantic==2.11.4
+pydantic-core==2.33.2
+pydantic-settings==2.9.1
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+pyyaml==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rpds-py==0.24.0
+smmap==5.0.2
+sniffio==1.3.1
+sqlalchemy==2.0.40
+streamlit==1.45.0
+tenacity==9.1.2
+tiktoken==0.9.0
+toml==0.10.2
+tqdm==4.67.1
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+yarl==1.20.0
+zstandard==0.23.0
